executable(
    meson.project_name(),
    config_file,
    'Application.vala',
    'Consts.vala',
    'DiskManager.vala',
    'Utils.vala',
    'Window.vala',
    'Objects/Video.vala',
    'Services/DirectoryMonitoring.vala',
    'Services/LibraryManager.vala',
    'Services/Thumbnailer.vala',
    'Widgets/UnsupportedFileDialog.vala',
    'Widgets/WelcomePage.vala',
    'Widgets/Library/EpisodesPage.vala',
    'Widgets/Library/LibraryItem.vala',
    'Widgets/Library/LibraryPage.vala',
    'Widgets/Player/BottomBar.vala',
    'Widgets/Player/PlayerPage.vala',
    'Widgets/Player/Playlist.vala',
    'Widgets/Player/PlaylistItem.vala',
    'Widgets/Player/PlaylistPopover.vala',
    'Widgets/Player/PreviewPopover.vala',
    'Widgets/Player/SettingsPopover.vala',
    'Widgets/Player/TimeWidget.vala',

    vala_args: [
        '--enable-experimental',
        '--target-glib=2.32',
    ],

    dependencies: [
        dependency('clutter-gst-3.0'),
        # dependency('clutter-gtk-1.0'),
        # dependency('gdk-x11-3.0'),
        dependency('gee-0.8'),
        dependency('glib-2.0'),
        dependency('gobject-2.0'),
        dependency('granite'),
        dependency('gstreamer-1.0'),
        dependency('gstreamer-pbutils-1.0'),
        dependency('gstreamer-video-1.0'),
        dependency('gstreamer-tag-1.0'),
        dependency('gtk4'),
        dependency('libadwaita-1'),

        meson.get_compiler('vala').find_library('posix'),
        meson.get_compiler('c').find_library('m', required : false)
    ],
    install : true
)
